add wyoming story, add alt text for tutorial images

--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -1,9 +1,9 @@
 ---
 title: S.H. Knight Science Camp
-locationTitle: S.H. Knight Science Camp
+locationTitle: S. H. Knight Geology Building
 address:
 location: ["SEWY"]
-latlon: [41.353977, -106.239144]
+latlon: [41.314328970079494, -105.5833908476826]
 neighborhood: Centennial
 zoom: 15
 tags: ["albany"]
@@ -21,12 +21,25 @@ Doc Knight came from a family of geologists - his father was also a professor at
 [LC ITEM]
 
 Known for his exciting lectures on geology, where he could draw both detailed diagrams on the chalkboards of geologic formations and a perfect circle.
+<LOCItem
+  type="book"
+  caption="Classroom Building from east"
+  image="/loc/sewy/knight/illo.jpg"
+  linkOut="https://www.loc.gov/resource/gdcmassbookdig.geologyofstonewa00morg/?sp=23&r=-0.06,-0.215,1.111,0.764,0"/>
 
+<ComicSection cols={9} elements={[
+    {type:"image", src: "/loc/sewy/knight/k1.png", position:{col:1, row:1}, size:{width:9, height:8}}
+]}/>
 [COMIC] Teaching inside. And you can see here, how the lava flows created this wavy..
 Looks outside....well, why don’t we just go see it??
 
 He established the Wyoming Science Camp in 1925, a place where students could learn geologic field methods, as well as matters of botany and zoology, amidst the subject itself.
 
+
+<ComicSection cols={9} elements={[
+    {type:"image", src: "/loc/sewy/knight/k2.png", position:{col:1, row:1}, size:{width:9, height:7}},
+    {type:"image", src: "/loc/sewy/knight/k3.png", position:{col:1, row:8}, size:{width:9, height:7}}
+]}/>
 [COMIC] Blackboard in the middle of nature
 Knight: It’s so great to be out here in Wyoming -- the rock formations are all exposed and easy to see (whereas in the east coast they’re covered by plants)
 Knight: we have examples of all three kinds of rocks,
