--- a/src/app/content/sewy/morris.mdx
+++ b/src/app/content/sewy/morris.mdx
@@ -1,6 +1,6 @@
 ---
-title:
-locationTitle:
+title: VVN TODO
+locationTitle: VVN TODO
 address:
 location: ["SEWY"] 
 latlon: [41.14022007766677, -104.82017796759929]
@@ -9,9 +9,9 @@ zoom: 15
 tags: [""]
 cameraImage: "/placeholderThumbnail.png"
 cardImage: "/placeholderThumbnail.png"
-stampName:
-photoPrompt:
-blurb:
+stampName: 
+photoPrompt: VVN TODO
+blurb: VVN TODO
 stickers: []
 ---
 
@@ -21,23 +21,30 @@ She was the first woman to hold public office in the United States as justice of
 
 South Pass City was the largest city along the Oregon Trail. By 1869, the year Morris arrived in South Pass City, over 400,000 people had crossed Wyoming. Mark Twain wrote about his visit to the stage station in his book “Roughing It”:
 
-[LC ITEM: Roughing It.]
-[LC ITEM: South Pass City]
+<LOCItem image="/loc/sewy/morris/roughingIt.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.roughingit02twai/?sp=110&r=-0.065,0.611,1.133,0.78,0" />
+<LOCItem image="/loc/sewy/morris/spc.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0067.photos/?sp=5"/>
 
 It wasn’t easy being the first female judge for Morris starting from day one. Her predecessor, J. W. Stillman, refused to turn his court dockets over to a woman.
 
-[COMIC]
+<ComicSection cols={9} rowHeight="2 rem" elements={[
+    {type:"image", src: "/loc/sewy/morris/e1.png", position:{col:1, row:2}, size:{width:9, height:7}},
+    {type:"image", src: "/loc/sewy/morris/e2.png", position:{col:1, row:9}, size:{width:9, height:7}}
+]}/>
 I won’t do it!
 Yeah that’s gonna be a warrant then
 
 In his first court appearance, Stillman’s attorney argued that the warrant was improperly issued
-[COMIC] Esther is looking @ the document
+<ComicSection cols={9} rowHeight="2 rem" elements={[
+    {type:"image", src: "/loc/sewy/morris/e3.png", position:{col:1, row:2}, size:{width:9, height:7}}
+]}/>
 .....okay I see where you’re coming from. Case dismissed
 -- they’re celebrating
 She just writes another one
 
 In his second court appearance, Stillman argued that it wouldn’t be a fair trial with her presiding 
-[COMIC] -- she looks at her two sons. her husband is mad she’s a judge
+<ComicSection cols={9} rowHeight="2 rem" elements={[
+    {type:"image", src: "/loc/sewy/morris/e4.png", position:{col:1, row:2}, size:{width:9, height:7}}
+]}/>
 okay I see where you’re coming from. Case dismissed
 hahahah you’ll never get these court cases from me!
 -- she looks at em. they’re messy. doesn’t want ehtme anyways
