--- a/src/app/content/sewy/lionsPark.mdx
+++ b/src/app/content/sewy/lionsPark.mdx
@@ -21,36 +21,48 @@ His eldest brother, John Jenkins, was a lawyer who later served as the state rep
 
 On his first day in Cheyenne, the brothers had dinner at Fort David Russell, as the elder John had to defend two of the officers in court. John eventually moved back to Wisconsin after his appointed ended, but James enjoyed Wyoming, and sent for his wife to move to the new state with him.
 
-[LC ITEM]
+<LOCItem image="/loc/sewy/lionsPark/fortDavid.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0259.sheet"/>
+<LOCItem image="/loc/sewy/lionsPark/officersQuarters.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0259.photos/?sp=1"/>
 
 James settled in Cheyenne. In 1878, when Jenkins planted his first tree in Cheyenne, it was a treeless prairie town. He took it upon himself to make Cheyenne a City of Trees.
 
 <ComicSection cols={9} elements={[
     {type:"image", src:"/loc/sewy/lionsPark/jenkins1.png", position:{col:2, row:1}, size:{width:7, height:3}},
+    {type:"type", src:"Beautiful city of trees we've got here", style:{outline:"bubble"}, position:{col:2, row:1}, size:{width:3, height:1}},
     {type:"image", src:"/loc/sewy/lionsPark/jenkins2.png", position:{col:2, row:4}, size:{width:7, height:3}},
     {type:"image", src:"/loc/sewy/lionsPark/jenkins3.png", position:{col:2, row:7}, size:{width:7, height:3}},
+    {type:"type", src:"... dude there's no trees" ,  style:{outline:"bubble"},position:{col:5, row:6}, size:{width:3, height:1}},
+    {type:"type", src:"Not *yet*",  style:{outline:"bubble"},position:{col:2, row:9}, size:{width:3, height:1}},
 
 ]}/>  
 
-Arbor Day was a new holiday established in Nebraska in 1874, aiming to get a growth of new trees planted to help beautify and conserve the area. The movement caught on in Wyoming, who found the reasons to plant trees compelling:
+Arbor Day was a new holiday established in Nebraska in 1874, aiming to get a growth of new trees planted to help beautify and conserve the area. The movement caught on in Wyoming, where the reasons to plant trees were compelling:
 
-[COMIC]
-Help with wind
-Help with water flooding
-Help make it beautiful for the next generation
-It was made a state holiday
+<ComicSection cols={7} elements={[
+    {type: "text", src:"Trees help create shelter from wind", position:{col: 1, row:1}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/sewy/lionsPark/tree1.png", position:{col: 2, row: 1}, size:{width:5, height:3}},
+    {type: "text", src:"They help prevent flooding by soaking up rainwater into the soil instead of letting it run off", position:{col: 1, row:4}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/sewy/lionsPark/tree2.png", position:{col: 2, row: 4}, size:{width:5, height:3}},
+    {type: "text", src:"And create a beautiful place for the next generation.", position:{col: 1, row:7}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/sewy/lionsPark/tree3.png", position:{col: 2, row: 7}, size:{width:5, height:3}},
+    {type: "text", src:"Arbor Day was made into a state holiday VVN TODO WHAT YEAR?.", position:{col: 4, row:9}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
+]}/>
 
 The first Arbor Day started off with a grand parade as a tree, loaded onto a wagon with a flag tied to its top, was planted in the first park in the city at 22nd St and Central Avenue. This first park, at the time fresh and new, is now known as the Old City Park, whose site now hosts the Wyoming State Supreme Court and the Wyoming State Museum.
 
-[LC ITEM ABOUT ARBOR DAY AND THE FIRST CITY PARK FROM BOOK]
+<LOCItem type="book" caption="Images of the first city park in Cheyenne. VVN TODO MORE ABOUT THIS" image="/loc/sewy/lionsPark/cityPark.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.photographsofche00kirk/?sp=15&st=image&r=-0.131,-0.029,1.244,0.872,0"/>
+<LOCItem type="newspaper" caption="VVNTODO Description of article" image="/loc/sewy/lionsPark/arborDay.png" linkOut="https://www.loc.gov/resource/sn84022149/1882-04-28/ed-1/?sp=4&r=0.138,0.067,0.364,0.25,0"/>
 
-When Arbor Day was nearly repealed in 1920, Jenkins wrote a passionate letter to continue the movement of adding trees to the city.
+Arbor Day was nearly repealed in 1920, and Jenkins was upset at the thought that the beautiful land around Sloan's Lake wouldn't reach its full potential. He wrote a letter to the Chamber of Commerce, who found his vision compelling and appointed him a "committee of one" to plant trees around the city.
 
-[COMIC] I like your spunk. Go for it!
-he has a shovel and a tree
->Okay!
+<ComicSection cols={5} elements={[
+    {type:"image", src:"/loc/sewy/lionsPark/jenkins4.png", position:{col: 2, row: 1}, size:{width:2, height:3}},
+    {type: "text", src:"I like your spunk. Go for it!", position:{col:1, row:2}, size:{width:1, height:1}, style:{outline:"bubble"}},
+    {type:"image", src:"/loc/sewy/lionsPark/jenkins5.png", position:{col: 4, row: 5}, size:{width:2, height:4}},
+    {type: "text", src:"Okay!", position:{col:2, row:6}, size:{width:1, height:1}, style:{outline:"bubble"}},
+]}/>
 
-Sloan’s lake grove was overgrown, with clover grown over 5 feet tall. But Jenkins painted a picture for the Lion’s Club, who was tasked with beautifying the area. He said “Gentlemen, if these grounds were cleaned up, this is the ideal spot for picnics and pleasure.” This motivated one of the members so much he shouted out in pride “LIONS PARK!”, and that’s how it got its name.
+Sloan’s Lake grove was overgrown, with clover over 5 feet tall. But Jenkins painted a picture for the Lion’s Club, who was tasked with beautifying the area. He said “Gentlemen, if these grounds were cleaned up, this is the ideal spot for picnics and pleasure.” This motivated one of the members so much he shouted out with pride, “LIONS PARK!”, and that’s how it got its name.
 
 {/* 
 Sticker template: 
