--- a/src/app/content/chicago/canal.mdx
+++ b/src/app/content/chicago/canal.mdx
@@ -4,12 +4,12 @@ locationTitle: Canal Origins Park
 address: 2701 S Ashland Ave
 location: ["Chicago"] 
 latlon: [41.8423, -87.6653]
-neighborhood: Ashland
+neighborhood: Orange Line
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/canal/c.jpg"
 cardImage: "/loc/chicago/canal/waterwaymap.jpg"
-stampName:
+stampName: "/illustrations/chicagoOrange.png"
 photoPrompt: "There are mosaics, sculptures, and signs that tell the story of the canal and its impact on Chicago. Explore the park and continue onto the riverwalk, where you can watch watercraft sail by."
 blurb:
 stickers: [{image: "/loc/chicago/canal/engineerLogo.png", linkOut: "https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"},{image: "/loc/chicago/canal/il.png", linkOut: "https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"},{image: "/loc/chicago/canal/camps.png", linkOut: "https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.684,0.288,0.414,0.285,0"},{image: "/loc/chicago/canal/ditch.png", linkOut: "https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.045,-0.027,0.3,0.207,0"}]
