--- a/src/app/content/chicago/graceland.mdx
+++ b/src/app/content/chicago/graceland.mdx
@@ -4,15 +4,15 @@ locationTitle: Graceland Cemetery
 address:
 location: ["Chicago"] 
 latlon: [41.9547, -87.6618]
-neighborhood:
+neighborhood: Red Line
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/graceland/getty.jpg"
 cardImage: "/loc/chicago/graceland/getty.jpg"
-stampName:
+stampName: "/illustrations/chicagoRed.png"
 photoPrompt:
 blurb:
-stickers: []
+stickers: [{image: "/loc/chicago/graceland/west.png", title: "West Face of Ryerson Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0942.sheet/?sp=2"}, {image: "/loc/chicago/graceland/honore.png", title: "Honore Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0941.sheet/?sp=2"}, {image: "/loc/chicago/graceland/getty.png", title: "Getty Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0120.sheet/?sp=2&st=image"}]
 ---
 
 Sitting along side the northern branch of the Red Line is the Graceland Cemetery -- covering 119 acres, you’ll find the final resting places of many old Chicago names like Kate Warne, the first female detective, and William Wallace Kimball, the founder of Kimball Pianos.
