--- a/src/app/content/chicago/muddyWaters.mdx
+++ b/src/app/content/chicago/muddyWaters.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/muddyWaters/lomax.jpg"
 cardImage: "/loc/chicago/muddyWaters/lomax.jpg"
-stampName:
+stampName: "/illustrations/chicagoGreen.png"
 photoPrompt: VVN TODO
 blurb: VVN TODO
 stickers: []
