--- a/src/app/content/chicago/onLeong.mdx
+++ b/src/app/content/chicago/onLeong.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/onLeong/header.png"
 cardImage: "/loc/chicago/onLeong/header.png"
-stampName:
+stampName: "/illustrations/chicagoRed.png"
 photoPrompt: "See what elements you can spot. There are dragons, butterflies, clouds, and lotus flowers. Can you find the medallions above the second floor windows?"
 blurb:
 stickers: [{image: "/loc/chicago/onLeong/eastElevation.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=5"},{image: "/loc/chicago/onLeong/craneAndFrog.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=12&st=image"}, {image: "/loc/chicago/onLeong/interiorLamp.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=13&st=image"},]
