--- a/src/app/content/chicago/palmerSquare.mdx
+++ b/src/app/content/chicago/palmerSquare.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/palmerSquare/bikeHeader.jpg"
 cardImage: "/loc/chicago/palmerSquare/bikeHeader.jpg"
-stampName:
+stampName: "/illustrations/chicagoBlue.png"
 photoPrompt:
 blurb:
 stickers: [{image: "/loc/chicago/palmerSquare/bikeSticker.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.28955/"}]
