--- a/src/app/content/chicago/lincolnPark.mdx
+++ b/src/app/content/chicago/lincolnPark.mdx
@@ -4,15 +4,15 @@ locationTitle: Lincoln Park Chess Pavilion
 address: Lakefront Trail
 location: ["Chicago"] 
 latlon: [41.9112, -87.6249]
-neighborhood:
+neighborhood: Brown Line
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/lincolnPark/lakefront.jpg"
 cardImage: "/loc/chicago/lincolnPark/lakefront.jpg"
-stampName: 
+stampName: "/illustrations/chicagoBrown.png"
 photoPrompt: VVN TODO
 blurb: VVN TODO
-stickers: []
+stickers: [{image: "/loc/chicago/lincolnPark/sculptures.png", title: "King and Queen sculptures from Chess Pavilion",linkOut: "https://www.loc.gov/resource/hhh.il1022.sheet"},]
 ---
 
 All the way over in Washington DC is the National Statuary Hall - with two statues for each state, over 100 statues stand representing some of the most notable people in American history. But much closer to home, Lincoln Park is known as Chicago’s outdoor Statuary Hall. With so many other fun things to do, it’s easier to overlook these stationary figures. However, learning some of the stories behind them make it more fun to stop and look around!
