fix garfield park stickers

--- a/src/app/content/chicago/garfieldPark.mdx
+++ b/src/app/content/chicago/garfieldPark.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/chicago/garfieldPark/greenhouse.png"
 stampName: "/illustrations/chicagoGreen.png"
 photoPrompt: "Explore inside and outside of the conservatory. What things are notable to you?"
 blurb:
-stickers: [{image: "/loc/chicago/garfieldPark/map.png", linkOut: "https://www.loc.gov/resource/g4104cm.g01790189611/?sp=2&r=0.058,1.049,0.725,0.499,0"}},{image: "/loc/chicago/garfieldPark/plants.jpg", linkOut: "https://www.loc.gov/resource/highsm.18037/?r=-0.51,-0.095,2.019,1.416,0"}, {image: "/loc/chicago/garfieldPark/floralGardens.png", linkOut: "https://www.loc.gov/resource/stereo.1s12454/"}, {image: "/loc/chicago/garfieldPark/dome.png", caption: "Garfield Park Golden Dome Fieldhouse. Photographs in the Carol M. Highsmith Archive, Library of Congress, Prints and Photographs Division" ,linkOut: "https://www.loc.gov/resource/highsm.18122/"}]
+stickers: [{image: "/loc/chicago/garfieldPark/map.png", linkOut: "https://www.loc.gov/resource/g4104cm.g01790189611/?sp=2&r=0.058,1.049,0.725,0.499,0"},{image: "/loc/chicago/garfieldPark/plants.jpg", linkOut: "https://www.loc.gov/resource/highsm.18037/?r=-0.51,-0.095,2.019,1.416,0"}, {image: "/loc/chicago/garfieldPark/floralGardens.png", linkOut: "https://www.loc.gov/resource/stereo.1s12454/"}, {image: "/loc/chicago/garfieldPark/dome.png", caption: "Garfield Park Golden Dome Fieldhouse. Photographs in the Carol M. Highsmith Archive, Library of Congress, Prints and Photographs Division", linkOut: "https://www.loc.gov/resource/highsm.18122/"}]
 ---
 
 When it first opened in 1874, Garfield Park was originally known as Chicago’s Central Park. Planned to be the crown jewel of Chicago’s West Side parks system, it was inspired by the gardens of French parks. However, over the remainder of the century, it deteriorated with neglect, and by the turn of the century, much of its lawns had become overgrown and unusable.
