add stickers for chicago

--- a/src/app/content/chicago/ashland.mdx
+++ b/src/app/content/chicago/ashland.mdx
@@ -4,7 +4,7 @@ locationTitle: Ashland Station
 address: 1601 W Lake St
 location: ["Chicago"] 
 latlon: [41.8852, -87.6669]
-neighborhood: Pink Line
+neighborhood: Ashland
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/ashland/rockIsland.png"
