--- a/src/app/content/chicago/canal.mdx
+++ b/src/app/content/chicago/canal.mdx
@@ -4,7 +4,7 @@ locationTitle: Canal Origins Park
 address: 2701 S Ashland Ave
 location: ["Chicago"] 
 latlon: [41.8423, -87.6653]
-neighborhood: Orange Line
+neighborhood: Ashland
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/canal/c.jpg"
