--- a/src/app/content/chicago/cpl.mdx
+++ b/src/app/content/chicago/cpl.mdx
@@ -4,7 +4,7 @@ locationTitle: Chicago Cultural Center
 address: 78 E Washington St
 location: ["Chicago"] 
 latlon: [41.8837, -87.6249]
-neighborhood: The Loop
+neighborhood: Washington/Wabash
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/cpl/building.jpg"
