--- a/src/app/content/chicago/garfieldPark.mdx
+++ b/src/app/content/chicago/garfieldPark.mdx
@@ -4,7 +4,7 @@ locationTitle: Garfield Park Conservatory
 address: 300 N Central Park Ave
 location: ["Chicago"] 
 latlon: [41.8862, -87.7172]
-neighborhood: Green Line
+neighborhood: Conservatory-Central Park Drive
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/garfieldPark/greenhouse.png"
