--- a/src/app/content/chicago/graceland.mdx
+++ b/src/app/content/chicago/graceland.mdx
@@ -4,7 +4,7 @@ locationTitle: Graceland Cemetery
 address:
 location: ["Chicago"] 
 latlon: [41.9547, -87.6618]
-neighborhood: Red Line
+neighborhood: Sheridan
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/graceland/getty.jpg"
