--- a/src/app/content/chicago/hullHouse.mdx
+++ b/src/app/content/chicago/hullHouse.mdx
@@ -4,7 +4,7 @@ locationTitle: Jane Addams Hull House Museum
 address: 800 S Halsted St
 location: ["Chicago"] 
 latlon: [41.8717, -87.6473]
-neighborhood: Blue Line
+neighborhood: UIC Halsted
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/hullHouse/postCard.jpg"
