--- a/src/app/content/chicago/onLeong.mdx
+++ b/src/app/content/chicago/onLeong.mdx
@@ -4,7 +4,7 @@ locationTitle: Pui Tak Center
 address: 2216 S Wentworth Ave
 location: ["Chicago"] 
 latlon: [41.8523, -87.6319]
-neighborhood: Chinatown
+neighborhood: Cermak-Chinatown
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/onLeong/header.png"
