--- a/src/app/content/chicago/palmerSquare.mdx
+++ b/src/app/content/chicago/palmerSquare.mdx
@@ -4,7 +4,7 @@ locationTitle: Palmer Square Park
 address: 2200 N Kedzie Blvd
 location: ["Chicago"] 
 latlon: [41.9210, -87.7024]
-neighborhood: Palmer Square
+neighborhood: California
 zoom: 15
 tags: [""]
 cameraImage: "/loc/chicago/palmerSquare/bikeHeader.jpg"
@@ -12,7 +12,7 @@ cardImage: "/loc/chicago/palmerSquare/bikeHeader.jpg"
 stampName: "/illustrations/chicagoBlue.png"
 photoPrompt:
 blurb:
-stickers: [{image: "/loc/chicago/palmerSquare/bikeSticker.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.28955/"}]
+stickers: [{image: "/loc/chicago/palmerSquare/bikeSticker.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.28955/"}, {image: "/loc/chicago/palmerSquare/bridget.png", title: "stereograph of Bridget on a bike",linkOut: "https://www.loc.gov/resource/stereo.1s51815/"}, {image: "/loc/chicago/palmerSquare/pf.png", title: "Figure of a man on a 'high wheeler' bicycle in Port Byron, Carol M. Highsmith Photography,",linkOut: "https://www.loc.gov/resource/highsm.59545/"}]
 ---
 
 Bikes have a long and deep history in Chicago, including in Palmer Square Park, where people used to gather for races around the track.
