Remove some TODOs

--- a/src/app/content/chicago/ashland.mdx
+++ b/src/app/content/chicago/ashland.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO
+title: The "L" is Born
 locationTitle: Ashland Station
 address: 1601 W Lake St
 location: ["Chicago"] 
@@ -37,12 +37,12 @@ Following a year later was the Lake Street “L” which ran from 52nd Avenue to
     {src:"I feel like I should do something with it...", type:"text", position:{col:6, row:22}, size:{width:3, height:3}, style:{outline:"bubble", fontSize:".9rem"}},
     {src:"He lost all the city's money after making a risky investment in the stock market, which promptly crashed after the Great Chicago Fire.", type:"text", position:{col:2, row:27}, size:{width:8, height:2}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
     {src:"/loc/chicago/ashland/y3.png", type:"image", position:{col:1, row:30}, size:{width:9, height:10}},
-    {src:"Through blackmail and bribes, Yerkes avoided most of his prison sentence and found himself in Chicago, gaining power as a streetcar mogul.", type:"text", position:{col:1, row:38}, size:{width:9, height:2}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
+    {src:"Through blackmail and bribes, Yerkes avoided most of his prison sentence and found himself in Chicago, gaining power as a streetcar mogul by buying most of the city's street railway systems.", type:"text", position:{col:1, row:38}, size:{width:9, height:2}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
     {src:"/loc/chicago/ashland/y4.png", type:"image", position:{col:1, row:42}, size:{width:9, height:10}},
     {src:"I feel like it's difficult to build all this infrastructure. Did you do crimes to get it done?", type:"text", position:{col:1, row:41}, size:{width:5, height:3}, style:{outline:"bubble", fontSize:".9rem"} },
     {src:"I wouldn’t say crimes… more like fancy math.", type:"text", position:{col:5, row:48}, size:{width:4, height:3}, style:{outline:"bubble", fontSize:".9rem"}, bubbleStyle: {tailDegree: 220} },
     {src:"/loc/chicago/ashland/y5.png", type:"image", position:{col:1, row:51}, size:{width:9, height:10}},
-    {src:"Ater the Lake Street 'L', the next line to open up was the Metropolitan West Side Elevated Railroad, a noteworthy achivement because it was **not** owned by Yerkes. Parts of that line are used as the Blue and Pink Lines today.", type:"text", position:{col:1, row:60}, size:{width:9, height:3}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
+    {src:"After the Lake Street 'L', the next line to open up was the Metropolitan West Side Elevated Railroad, a noteworthy achivement because it was **not** owned by Yerkes. Parts of that line are used as the Blue and Pink Lines today.", type:"text", position:{col:1, row:60}, size:{width:9, height:3}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
 ]}/>
 
 Northwestern Elevated Railroad Company was also built under Yerkes, and the Union Loop, which finally connected the lines into the heart of the city, was Yerkes’ as well.
