--- a/src/app/content/chicago/canal.mdx
+++ b/src/app/content/chicago/canal.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO
+title: A River Reversed
 locationTitle: Canal Origins Park
 address: 2701 S Ashland Ave
 location: ["Chicago"] 
