--- a/src/app/content/chicago/hullHouse.mdx
+++ b/src/app/content/chicago/hullHouse.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO
+title: Culture for the Community
 locationTitle: Jane Addams Hull House Museum
 address: 800 S Halsted St
 location: ["Chicago"] 
