--- a/src/app/content/chicago/lincolnPark.mdx
+++ b/src/app/content/chicago/lincolnPark.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO
+title: Sculptures? Check.
 locationTitle: Lincoln Park Chess Pavilion
 address: Lakefront Trail
 location: ["Chicago"] 
@@ -10,8 +10,8 @@ tags: [""]
 cameraImage: "/loc/chicago/lincolnPark/lakefront.jpg"
 cardImage: "/loc/chicago/lincolnPark/lakefront.jpg"
 stampName: "/illustrations/chicagoBrown.png"
-photoPrompt: VVN TODO
-blurb: VVN TODO
+photoPrompt:
+blurb:
 stickers: [{image: "/loc/chicago/lincolnPark/sculptures.png", title: "King and Queen sculptures from Chess Pavilion",linkOut: "https://www.loc.gov/resource/hhh.il1022.sheet"},]
 ---
 
@@ -42,10 +42,10 @@ The pyramid was left until 2009 when a car accident destroyed the granite base. 
 
 Eugene Field, born in St. Louis and later a Chicago resident, was a writer. He contributed to newspapers like the Chicago Daily with articles in a light-hearted tone about things happening around town. eventually known for his poems for children. When he died in 1895, he was considered the United State’s children’s poet laureate.
 
-To raise funds for the memorial, schoolchildren donated their pocket money. The memorial has a lot of imagery referring to Field’s work -- ______ , and excerpts from his poems on both sides of the base. Designed by architects Delano & Aldrich and sculptor Edward Francis McCarten, the Dream Lady floats about the sleeping children with a fistful of poppies.
+To raise funds for the memorial, schoolchildren donated their pocket money. The memorial has a lot of imagery referring to Field’s work, and excerpts from his poems on both sides of the base. Designed by architects Delano & Aldrich and sculptor Edward Francis McCarten, the Dream Lady floats about the sleeping children with a fistful of poppies.
 
 <LOCItem image="/loc/chicago/lincolnPark/fieldFlowers.jpg" linkOut="https://www.loc.gov/resource/ppmsca.42198/"/>
-<LOCItem caption="TODO: carved into the right side" image="/loc/chicago/lincolnPark/spt.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.poemsofeugenefi00fiel/?sp=233&st=image&r=-0.456,0.154,1.825,1.279,0"/>
+<LOCItem caption="" image="/loc/chicago/lincolnPark/spt.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.poemsofeugenefi00fiel/?sp=233&st=image&r=-0.456,0.154,1.825,1.279,0"/>
 
 <LOCItem image="/loc/chicago/lincolnPark/skating.png" linkOut="https://www.loc.gov/resource/highsm.18149/"/>
 # Chess Pavilion
