--- a/src/app/content/chicago/muddyWaters.mdx
+++ b/src/app/content/chicago/muddyWaters.mdx
@@ -1,7 +1,7 @@
 ---
-title: VVN TODO
-locationTitle: VVN TODO
-address: VVN TODO
+title: It's Electric
+locationTitle: Muddy Waters Home
+address: 4339 S Lake Park Ave, Chicago, IL 60653
 location: ["Chicago"] 
 latlon: [41.81627, -87.6190]
 neighborhood: Kenwood
@@ -10,8 +10,8 @@ tags: [""]
 cameraImage: "/loc/chicago/muddyWaters/lomax.jpg"
 cardImage: "/loc/chicago/muddyWaters/lomax.jpg"
 stampName: "/illustrations/chicagoGreen.png"
-photoPrompt: VVN TODO
-blurb: VVN TODO
+photoPrompt:
+blurb:
 stickers: []
 ---
 
