--- a/src/app/content/chicago/onLeong.mdx
+++ b/src/app/content/chicago/onLeong.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO
+title: Chinatown's Ornate Meeting Place
 locationTitle: Pui Tak Center
 address: 2216 S Wentworth Ave
 location: ["Chicago"] 
@@ -23,7 +23,7 @@ However, the anti-Chinese sentiment was also felt in Chicago -- with increased i
 
 In 1926, the On Leong Association wanted a more permanent space. As a community organizer, they needed a building that could house all the events and gatherings they held. They hired the Michaelsen and Rognstad firm to design the new building, as there were no Chinese architects working in this time.
 
-Michaelsen and Rognstad did their research on Chinese architecture and design through books such as the German book *Chinesische Architekture*. What resulted was in an amalgamation of Chinese-inspired design elements onv a very Chicago building.
+Michaelsen and Rognstad did their research on Chinese architecture and design through books such as the German book *Chinesische Architekture*. What resulted was in an amalgamation of Chinese-inspired design elements on a very Chicago building.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"The exterior of the building has many Chinese elements, while the interior layout is very similar to a typical union hall building in Chicago -- a space where people can meet.", position:{col:1, row:1}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
@@ -43,7 +43,7 @@ Michaelsen and Rognstad did their research on Chinese architecture and design th
     {type:"image", src:"/loc/chicago/onLeong/rognstad3.png", position:{col:3, row:38}, size:{width:4, height:5}},
     {type:"text", src:"Overall, lots of Chinese imagery was used, and you’ll be able to spot elements such as clouds, butterflies, peacocks, lotus flowers, and both green and yellow dragons.", position:{col:3, row:45}, size:{width:7, height:3}, style:{outline:"bubble"}},
 ]}/>
-<BigLink title="VVN TODO" image="/placeholderThumbnail.png" link="https://www.loc.gov/item/il0981/"/>
+<BigLink title="Link: Historic American Buildings Survey report on Pui Tak Center" thumbnail="/loc/chicago/onLeong/cover.png" link="https://www.loc.gov/item/il0981/"/>
 
 <LOCItem caption="The Gold Dome Building in Garfield Park, another building by the Michaelsen and Rognstad firm. After the successful reception of the On Leong design, the firm was hired to do lots of other work in Chinatown, including the building across the street, the Won Kow." image="/loc/chicago/onLeong/goldDome.jpg" linkOut="https://www.loc.gov/resource/highsm.18035/?r=-0.431,0,1.862,1.294,0"/>
 
