--- a/src/app/content/sewy/atlas.mdx
+++ b/src/app/content/sewy/atlas.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO
+title: The prettiest showhouse west of the Missouri
 locationTitle: Atlas Theatre
 address: 211 W Lincolnway
 location: ["SEWY"] 
@@ -10,9 +10,9 @@ tags: [""]
 cameraImage: "/loc/sewy/atlas/exterior.jpg"
 cardImage: "/loc/sewy/atlas/exterior.jpg"
 stampName:
-photoPrompt: VVN TODO
-blurb: VVN TODO
-stickers: []
+photoPrompt: 
+blurb: 
+stickers: [{image: "/loc/sewy/atlas/theatre.png",title: "General view of facade", linkOut: "https://www.loc.gov/resource/hhh.wy0017.photos/?sp=2&st=image"}, {image: "/loc/sewy/atlas/atlas.png", title: "Newspaper clipping from The Wyoming tribune", linkOut: "https://www.loc.gov/resource/sn83025231/1908-04-30/ed-1/?sp=2&q=atlas+theatre&r=0.161,0.049,0.5,0.35,0"}]
 ---
 
 Since its early days, Cheyenne has been a city that’s had appetite for arts and entertainment. When it was clear that the town was around for the long haul in the 1880’s, buildings started to be constructed to be more permanent, including houses, the train depot, and Atlas Building.
@@ -20,6 +20,7 @@ Since its early days, Cheyenne has been a city that’s had appetite for arts an
 Before it was the Atlas Theatre, the location was know as the Atlas Block. The Atlas Building was developed in 1887, and though it was not a theatre at the time, William Dubois remodeled it in 1907 to become a venue that could hold an audience of 550.
 
 <LOCItem image="/loc/sewy/atlas/exterior.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0017.photos/?sp=2"/>
+<LOCItem image="/loc/sewy/atlas/chandelier.jpg" caption="Detail of chandelier in main auditorium" linkOut="https://www.loc.gov/resource/hhh.wy0017.photos/?sp=8"/>
 
 When people from the entertainment industry came to see the new theatre, they said it was the “prettiest showhouse west of the Missouri”.
 
@@ -54,8 +55,7 @@ And perhaps one of its most interesting uses -- the Atlas’s curtains feature a
 ]}/>
 
 
-
-<BigLink link="https://www.loc.gov/exhibits/art-of-theatrical-design/overview.html" thumbnail="/placeholderThumbnail.png" title="VVN TODO"/>
+<BigLink link="https://www.loc.gov/exhibits/art-of-theatrical-design/overview.html" thumbnail="/loc/sewy/atlas/brahams.png" title="Learn more about theatrical design through the Library of Congress"/>
 
 {/* 
 Sticker template: 
