civic center stickers (sewy)

--- a/src/app/content/sewy/atlas.mdx
+++ b/src/app/content/sewy/atlas.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/sewy/atlas/exterior.jpg"
 stampName:
 photoPrompt: 
 blurb: 
-stickers: [{image: "/loc/sewy/atlas/theatre.png",title: "General view of facade", linkOut: "https://www.loc.gov/resource/hhh.wy0017.photos/?sp=2&st=image"}, {image: "/loc/sewy/atlas/atlas.png", title: "Newspaper clipping from The Wyoming tribune", linkOut: "https://www.loc.gov/resource/sn83025231/1908-04-30/ed-1/?sp=2&q=atlas+theatre&r=0.161,0.049,0.5,0.35,0"}]
+stickers: [{image: "/loc/sewy/atlas/theatre.png",title: "General view of facade", linkOut: "https://www.loc.gov/resource/hhh.wy0017.photos/?sp=2&st=image"}, {image: "/loc/sewy/atlas/atlas.png", title: "Newspaper clipping from The Wyoming tribune", linkOut: "https://www.loc.gov/resource/sn83025231/1908-04-30/ed-1/?sp=2&q=atlas+theatre&r=0.161,0.049,0.5,0.35,0"},{image: "/loc/sewy/atlas/hat.png", title: "Positive paper print from lantern slide used in motion picture theaters as announcement.", linkOut: "https://www.loc.gov/item/2012645955/"}]
 ---
 
 Since its early days, Cheyenne has been a city that’s had appetite for arts and entertainment. When it was clear that the town was around for the long haul in the 1880’s, buildings started to be constructed to be more permanent, including houses, the train depot, and Atlas Building.
