--- a/src/app/content/sewy/lionsPark.mdx
+++ b/src/app/content/sewy/lionsPark.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/sewy/lionsPark/cityPark.jpg"
 stampName:
 photoPrompt: VVN TODO
 blurb: VVN TODO
-stickers: []
+stickers: [{image: "/loc/sewy/lionsPark/trees.jpg", linkOut: "https://www.loc.gov/resource/cph.3b48715/", title: "Poster encouraging planting trees as a method of soil conservation."}]
 ---
 
 James Jenkins arrive in Baraboo, Wisconsin against his will -- his parents both immigrated there from Liverpool, England in early 1852, along with his grandparents and four other siblings. He was born in October that year, and was the youngest of the family.
