adding more stickers

--- a/src/app/content/sewy/civicCenter.mdx
+++ b/src/app/content/sewy/civicCenter.mdx
@@ -40,9 +40,9 @@ The need for a second school building became apparent pretty quickly which resul
 
 Fifty years later, renovations were needed for both schools to expand, and architect Wilbur Hitchcock led the designs for both. He was a prolific architect in the region who built over 300 buildings and houses in Laramie alone despite his early death. Hitchcock studied and later taught at the University of Wyoming, and library he designed for campus, now the Aven Nelson Building, was named one of the 13 most beautiful libraries in the US.
 
-<LOCItem image="/loc/sewy/civicCenter/ad.jpg" linkOut="https://www.loc.gov/resource/sn92066979/1912-07-17/ed-1/?sp=2&q=hitchcock&r=0.53,0.21,0.399,0.28,0"/>
-<LOCItem image="/loc/sewy/civicCenter/trip.jpg" caption="Hitchcock travelled to the east coast to study the libraries there in preparation for the one he would design ." linkOut="https://www.loc.gov/resource/sn92066979/1921-12-14/ed-1/?sp=6&q=hitchcock&r=0.382,0.269,0.37,0.254,0"/>
-<LOCItem image="/loc/sewy/civicCenter/cooper.jpg" caption="other buildings in Laramie" linkOut="https://www.loc.gov/resource/highsm.32794/"/>
+<LOCItem image="/loc/sewy/civicCenter/ad.jpg" type="newspaper" linkOut="https://www.loc.gov/resource/sn92066979/1912-07-17/ed-1/?sp=2&q=hitchcock&r=0.53,0.21,0.399,0.28,0"/>
+<LOCItem image="/loc/sewy/civicCenter/trip.jpg" type="newspaper" caption="Hitchcock travelled to the east coast to study the libraries there in preparation for the one he would design ." linkOut="https://www.loc.gov/resource/sn92066979/1921-12-14/ed-1/?sp=6&q=hitchcock&r=0.382,0.269,0.37,0.254,0"/>
+<LOCItem image="/loc/sewy/civicCenter/cooper.jpg" type="pnp" caption="other buildings in Laramie" linkOut="https://www.loc.gov/resource/highsm.32794/"/>
 
 In 1930, while visiting Los Angeles on his honeymoon, Hitchcock died in a car accident. The renovations of the high schools were still unfinished, and the project was picked up by his partner Walter E Ware.
 
