--- a/src/app/content/sewy/lightPlant.mdx
+++ b/src/app/content/sewy/lightPlant.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/sewy/lightPlant/cleveland.jpg"
 stampName:
 photoPrompt:
 blurb:
-stickers: []
+stickers: [{image: "/loc/sewy/lightPlant/complete.png", title: "Swan Lamp Complete from book", linkOut: "https://www.loc.gov/resource/gdcscd.00337706836/?sp=25&st=image&r=0.113,0.418,0.735,0.511,0"},{image: "/loc/sewy/lightPlant/bracket.png", title: "Swan Bracket Lamp from book", linkOut: "https://www.loc.gov/resource/gdcscd.00337706836/?sp=25&st=image&r=0.113,0.418,0.735,0.511,0"},{image: "/loc/sewy/lightPlant/lightPlant.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=27&st=image&r=0.092,0.756,1.011,0.703,0", title: "Photo of Plaining Mill and Electric Light Plant"}, {image: "/loc/sewy/lightPlant/sanborn.png", linkOut: "https://www.loc.gov/resource/g4264lm.g097661907/?sp=3&st=image&r=-0.007,0.702,0.428,0.303,0", title: "Insurance map of the Laramie Light & Power Co."}]
 ---
 
 Most parts of a city are intentionally built. Water doesn’t naturally flow to town, determined citizens have to identify a source and direct it there. Buildings are built, food is grown, and in 1885 , electricity was a thing that a town could invest in.
@@ -53,14 +53,14 @@ Cheyenne embraced electricity first in 1883 by lighting up part of its downtown.
 The Brush Swan Electric Light Company used both arc and incandesent lights and helped cities set up with power plants and supplies.
 However, they didn’t respond to Laramie’s request, and the Edison Company was the one who eventually brought power to the city.
 
-VVNTODO Image of the old Laramie light plant
+<LOCItem image="/loc/sewy/lightPlant/mill.jpg" type="book" linkOut="https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=27&st=image&clip=521,2106,1583,877&ciw=817&rot=0"/>
 
 The Laramie Light Plant was located at Clark and 3rd, and was powered by the water from the city springs. At first, the electricity being generated was limited to being used for light only, and the plant only ran at night. 
 After a while, factories were allowed to use the power, including the flour mill next door, which was the first in the world to be powered by electricity.
 
-<LOCItem  image="/loc/sewy/lightPlant/map.jpg" caption="1907 map of Laramie showing the mill next to the power plant." linkOut="https://www.loc.gov/resource/g4264lm.g097661907/?sp=3&st=image&r=-0.007,0.716,0.428,0.275,0"/>
+<LOCItem  image="/loc/sewy/lightPlant/map.jpg" type="map" caption="1907 map of Laramie showing the mill next to the power plant." linkOut="https://www.loc.gov/resource/g4264lm.g097661907/?sp=3&st=image&r=-0.007,0.716,0.428,0.275,0"/>
 
-<LOCItem  image="/loc/sewy/lightPlant/whatWeHave.jpg" caption="Excerpt from a 1908 book highlighting the benefits of living in Laramie. Apart from its electric system, Laramie had a nice, dry climate, and “a score of secret societies”." linkOut="https://www.loc.gov/resource/gdcmassbookdig.albanycountywyo00wyom/?sp=4&r=-0.007,0.2,0.623,0.401,0"/>
+<LOCItem  image="/loc/sewy/lightPlant/whatWeHave.jpg" type="book"  caption="Excerpt from a 1908 book highlighting the benefits of living in Laramie. Apart from its electric system, Laramie had a nice, dry climate, and “a score of secret societies”." linkOut="https://www.loc.gov/resource/gdcmassbookdig.albanycountywyo00wyom/?sp=4&r=-0.007,0.2,0.623,0.401,0"/>
 
 Though the light plant was demolished in the 1970s, Laramie is still known as the Gem City on the Plains -- named such because of the glow it gave in the distance at night.
 
