all the rest of wy stickers

--- a/src/app/content/sewy/depot.mdx
+++ b/src/app/content/sewy/depot.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/sewy/depot/map1907.jpg"
 stampName:
 photoPrompt:
 blurb:
-stickers: [{image: "/loc/sewy/depot/rollingMillsSticker.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=27&st=image&r=-0.053,0.39,1.03,0.716,0", title: "Picture of Rolling Mills from 1892 book."},{image: "/loc/sewy/depot/lifeline.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.30679/", title: "Life-line of the nation American railroads poster"}, {image: "/loc/sewy/depot/montana.png", title: "Travel poster shows steam engine pulling cars through Bozeman Pass.", linkOut: "https://www.loc.gov/resource/cph.3g14974/" }]
+stickers: [{image: "/loc/sewy/depot/rollingMillsSticker.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=27&st=image&r=-0.053,0.39,1.03,0.716,0", title: "Picture of Rolling Mills from 1892 book."},{image: "/loc/sewy/depot/lifeline.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.30679/", title: "Life-line of the nation American railroads poster"}, {image: "/loc/sewy/depot/montana.png", title: "Travel poster shows steam engine pulling cars through Bozeman Pass.", linkOut: "https://www.loc.gov/resource/cph.3g14974/" },{image: "/loc/sewy/depot/m.png", title: "Floor plan of former Union Pacific Rolling Mills, 1907", linkOut: "https://www.loc.gov/resource/g4264lm.g097661907/?sp=5&st=image&r=0.547,0.732,0.481,0.331,0"}]
 ---
 
 Union Pacific’s presence in Laramie has always been shifting. In 1868, the Union Pacific built the original depot and hotel to encourage rail travel and provide a place to live for people who worked the depot.
