--- a/src/app/content/sewy/experimental.mdx
+++ b/src/app/content/sewy/experimental.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/sewy/experimental/lgp2.jpg"
 stampName:
 photoPrompt:
 blurb:
-stickers: []
+stickers: [{image: "/loc/sewy/experimental/ccc.jpg", linkOut: "https://www.loc.gov/item/92513367/", title: "Poster promoting the U.S. Civilian Conservation Corps"}, {image: "/loc/sewy/experimental/tree.png", linkOut: "https://www.loc.gov/resource/cph.3b48810/", title: "Poster promoting conservation of trees as a natural resource."}, {image: "/loc/sewy/experimental/jackson.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.storyofaccomplis00unse/?sp=31&q=jackson+lake+civilian+conservation+corps&r=-0.197,0.551,1.415,0.983,0", title: "CCC wrokers on Jackson Lake"}]
 ---
 Cheyenne, a budding new town in the 1870s, was a “treeless prairie town surrounded by large ranches”. Very few trees grow natively to the high prairie -- one of them being the heart-leafed cottonwood. However, encouraging growth of plants is good. The coverage protects animals from cutting winds, and with roots in the ground, water would soak up instead of flooding over and destroying the landscape.
 
