--- a/src/app/content/sewy/morris.mdx
+++ b/src/app/content/sewy/morris.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/sewy/morris/spc.jpg"
 stampName: 
 photoPrompt: VVN TODO. Mention the statue.
 blurb: VVN TODO.
-stickers: []
+stickers: [{image: "/loc/sewy/morris/poster.png", linkOut: "https://www.loc.gov/resource/yan.1a38589/", title: "Poster featuring Morris by The National Organization for Women"}, {image: "/loc/sewy/morris/southPass.jpg", title: "Photo of a Cabin in South Pass City", linkOut: "https://www.loc.gov/resource/highsm.38568/"}, {image: "/loc/sewy/morris/capitol.png", title: "Wyoming Capitol from Carol M. Highsmith Archive" , linkOut: "https://www.loc.gov/resource/highsm.16996/?r=0.342,1.112,0.256,0.176,0"}, {image: "/loc/sewy/morris/statue.png", title: "Statue of Esther Hobart Morris from Carol M. Highsmith Archive", linkOut: "https://www.loc.gov/resource/highsm.16996/?r=0.292,1.083,0.364,0.25,0"}]
 ---
 
 Esther Hobart Morris was a woman built to be a legend and so she became one. She stood at a striking six feet tall and 180 pounds and always wore the latest fashions because she knew people would always be watching her.
@@ -75,3 +75,5 @@ In his second court appearance, Stillman argued that it wouldn’t be a fair tri
 Even though she lost her first court case, she won in the court of public opinion. People thought her decisions were fair, and she prioritized clearly communicating her reasoning over using fancy legal speak.
 
 Less than a year after her initial appointment, Morris’s term came to an end, and she left South Pass City. She followed her son to Laramie, and eventually settled in Cheyenne. Two nine-feet tall statues exist to celebrate her legacy -- one stands in the State Capitol in Cheyenne, and other stands in the US Capitol in Washington DC.
+
+<LOCItem image="/loc/sewy/morris/statue.jpg" caption="The National Statuary Hall in Washington DC hosts two statues to represent each state in the US Capitol. Esther is one that stands for Wyoming." linkOut="https://www.loc.gov/resource/pcrd.1a02480/"/>
