--- a/src/app/content/sewy/atlas.mdx
+++ b/src/app/content/sewy/atlas.mdx
@@ -19,7 +19,7 @@ Since its early days, Cheyenne has been a city that’s had appetite for arts an
 
 Before it was the Atlas Theatre, the location was know as the Atlas Block. The Atlas Building was developed in 1887, and though it was not a theatre at the time, William Dubois remodeled it in 1907 to become a venue that could hold an audience of 550.
 
-<LOCItem image="/loc/sewy/atlas/exterior.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0017.photos/?sp=2"/>
+<LOCItem image="/loc/sewy/atlas/exterior.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0017.photos/?sp=2"/>
 <LOCItem image="/loc/sewy/atlas/chandelier.jpg" caption="Detail of chandelier in main auditorium" linkOut="https://www.loc.gov/resource/hhh.wy0017.photos/?sp=8"/>
 
 When people from the entertainment industry came to see the new theatre, they said it was the “prettiest showhouse west of the Missouri”.
